--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body>
-    <div id="app" class="bg-slate-900 h-screen text-slate-200"></div>
+  <body class="bg-slate-900 text-slate-200">
+    <div id="app" class="h-screen"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
