--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <title>7Sec</title>
+    <meta name="description" content="7 seconds to clear them all">
     <meta charset="UTF-8" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/icon.svg" color="#FFFFFF">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body class="bg-slate-900 text-slate-200">
     <div id="app" class="h-screen"></div>
